Made lots of updates, including: security fixes, ui tweaks, translatability.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@61224 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -101,3 +101,11 @@ table.feed-stats-data td.feed-stats-alt {
 .layout td {
 	vertical-align: top;
 }
+
+.feed-stats-nmb {
+	margin: 10px 0 0 0 !important;
+}
+
+.feed-stats-nmt {
+	margin: 0 0 10px 0 !important;
+}
